// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Provisioners Card > should disable the \`Show More\` button if there is no more data to display 1`] = `
<div
  class="dusk-card data-card"
>
  <header
    class="data-card__header"
    slot="header"
  >
    <h1
      class="data-card__header-title"
    >
      Provisioniers — 10 Displayed Items
    </h1>
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--normal"
      disabled=""
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Show More
      </span>
    </button>
  </header>
   
  <div
    class="data-card__content"
  >
    <div
      class="table-container provisioners-table provisioners-card__table"
    >
      <table
        class="table"
      >
        <thead
          class="table__head"
        >
          <tr
            class="table__row"
          >
            <th
              class="table__header-cell"
            >
              Staking Address
            </th>
            
             
            <th
              class="table__header-cell"
            >
              Staked Amount (DUSK)
            </th>
            
             
            <th
              class="table__header-cell"
            >
              Reclaimable Staked Amount (DUSK)
            </th>
            
             
            <th
              class="table__header-cell"
            >
              Slashes
            </th>
            
             
            <th
              class="table__header-cell"
            >
              Hard Slashes
            </th>
            
             
            <th
              class="table__header-cell"
            >
              Accumulated Reward (DUSK)
            </th>
            
          </tr>
        </thead>
         
        <tbody
          class="table__body"
        >
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell"
            >
              m6dy2gz3jC...tW82FWtnpf
            </td>
            
             
            <td
              class="table__data-cell"
            >
              500,000
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              7,121.257296087
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell"
            >
              m9dVuRgr3C...94r33pFQyz
            </td>
            
             
            <td
              class="table__data-cell"
            >
              500,000
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              6,923.840604194
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell"
            >
              mHGvQ9Xdjz...iTfxTvgn7f
            </td>
            
             
            <td
              class="table__data-cell"
            >
              4,800
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              89.505343279
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell"
            >
              mLx5HUo5Ph...BrRgEzoka8
            </td>
            
             
            <td
              class="table__data-cell"
            >
              1,234
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              29.633646022
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell"
            >
              mTgXDqkyVa...gAseybAsfU
            </td>
            
             
            <td
              class="table__data-cell"
            >
              500,000
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              7,518.756679536
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell"
            >
              mUJHMDEBiT...FHNxRNhoAA
            </td>
            
             
            <td
              class="table__data-cell"
            >
              4,800
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              73.800637305
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell"
            >
              mUUpjnXow2...SfzQcywzaW
            </td>
            
             
            <td
              class="table__data-cell"
            >
              500,000
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              7,653.541671166
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell"
            >
              mWvq9EWD9b...oU7BY2oEDe
            </td>
            
             
            <td
              class="table__data-cell"
            >
              1,000
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              1.613840782
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell"
            >
              mXKJ97xTtr...JgkCK2o7x4
            </td>
            
             
            <td
              class="table__data-cell"
            >
              500,000
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              7,512.060104659
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell"
            >
              mdXsA3Ee1Y...K8VZPimZ2J
            </td>
            
             
            <td
              class="table__data-cell"
            >
              500,000
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell"
            >
              7,973.118109253
            </td>
            
             
          </tr>
          
        </tbody>
      </table>
    </div>
    
  </div>
  
   
</div>
`;

exports[`Provisioners Card > should disable the \`Show More\` button is the card is in the loading state 1`] = `
<div
  class="dusk-card data-card"
>
  <header
    class="data-card__header"
    slot="header"
  >
    <h1
      class="data-card__header-title"
    >
      Provisioniers — 0 Displayed Items
    </h1>
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--normal"
      disabled=""
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Show More
      </span>
    </button>
  </header>
   
  <div
    aria-label="Loading"
    class="dusk-progress-bar data-card__progress-bar"
    role="progressbar"
  >
    <div
      class="dusk-progress-bar__filler dusk-progress-bar__filler--undetermined"
    />
  </div>
  
   
</div>
`;

exports[`Provisioners Card > should render the \`ProvisionersCard\` component 1`] = `
<div
  class="dusk-card data-card"
>
  <header
    class="data-card__header"
    slot="header"
  >
    <h1
      class="data-card__header-title"
    >
      Provisioniers — 0 Displayed Items
    </h1>
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--normal"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Show More
      </span>
    </button>
  </header>
   
  
   
</div>
`;
